client/src/components/home/ContactForm.module.css
.contactFormContainer {
  background-image: linear-gradient(
    var(--cerulean-color),
    var(--cerulean-color),
    var(--pine-green-color)
  );
  display: flex;
  flex-direction: column;
}

.contactFormIntro {
  margin-left: 70px;
  margin-right: 70px;
}

.contactFormFields {
  margin-left: 100px;
  margin-right: 100px;
}

.landingContactForm {
  display: flex;
  flex-direction: column;
  max-width: fit-content;
  gap: 20px;
}

.formSection {
  display: flex;
  gap: 400px;
}

.inputContainer {
  display: flex;
  flex-direction: column;
}

.inputContainer label {
  color: var(--aqua-color);
}

.requiredStar {
  color: var(--alizarin-crimson-color);
}

.inputContainer input {
  background: inherit;
  border-bottom: 1px solid var(--aqua-color);
}

.inputContainer input::placeholder {
  color: var(--foam-color);
  font-style: italic;
}
.contactMessage .inputContainer {
  width: 870px;
}

.inputContainer textarea {
  background: inherit;
  resize: none;
  height: 100px;
  padding: 20px 10px;
  box-sizing: border-box;
  border: 2px solid var(--black-pearl-color);
  border-radius: 7px;
}

.inputContainer textarea::placeholder {
  color: var(--aqua-color);
}

.error {
  color: var(--alizarin-crimson-color);
  font-size: 0.625em;
}


small.successMessage {
  color: var(--pine-green-color);
}

small.errorMessage {
  color: var(--alizarin-crimson-color);
}

.formMessage {
display: flex;
  justify-content: center;
  align-items: center;
  font-size: 0.75em;
}
.submitButtonContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 50px;
}

.submitButton {
  background: var(--black-pearl-color);
  color: var(--foam-color);
  font-weight: 700;
  padding: 15px 100px;
}

.submitButton:hover {
  background: var(--foam-color);
  color: var(--black-pearl-color);
}

/* RESPONSIVE BREAKPOINTS */
@media (max-width: 991px) {
  .contactFormIntro {
    margin-left: 30px;
    margin-right: 30px;
  }

  .contactFormFields {
    margin-left: 60px;
    margin-right: 60px;
  }

  .formSection {
    gap: 300px;
  }

  .contactMessage .inputContainer {
    width: 770px;
  }
}

@media (max-width: 832px) {
  .contactFormFields {
    margin-left: 40px;
    margin-right: 40px;
  }

  .formSection {
    gap: 200px;
  }

  .contactMessage .inputContainer {
    width: 670px;
  }
}

@media (max-width: 768px) {
  .contactFormIntro,
  .contactFormFields {
    margin-left: 20px;
    margin-right: 20px;
  }

  .formSection {
    gap: 70px;
  }

  .contactMessage .inputContainer {
    width: 540px;
  }
}

@media (max-width: 564px) {
  .formSection {
    gap: 30px;
  }

  .contactMessage .inputContainer {
    width: 500px;
  }
}

@media (max-width: 520px) {
  .formSection {
    flex-direction: column;
    gap: 20px;
  }

  .contactMessage .inputContainer {
    width: 400px;
  }
}

@media (max-width: 462px) {
  .contactMessage .inputContainer {
    width: 360px;
  }
}

@media (max-width: 391px) {
  .contactMessage .inputContainer {
    width: 320px;
  }
}

